Revert "made the design of the service cards consistent and fixed overflowing"

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1205,14 +1205,6 @@ html {
   font-size: 7rem;
   max-width: max-content;
   margin-inline: auto;
-  background-color: var(--white);
-  padding: 5px;
-  margin: 0px;
-  /* background-color: red; */
-  border-radius: 50%;
-  position: absolute;
-  top: -3.5rem;
-  border: 1px solid #ccc;
 }
 
 .service-card .card-icon ion-icon {
@@ -1220,7 +1212,6 @@ html {
 }
 
 .service-card .card-title {
-  padding-top: 10px;
   letter-spacing: -1px;
   margin-block: 10px;
 }
@@ -1228,7 +1219,6 @@ html {
 .service-card .card-text {
   font-family: var(--ff-inter);
 }
-
 
 .btn-link {
   display: flex;
@@ -1239,14 +1229,6 @@ html {
   font-size: var(--fs-8);
   font-weight: var(--fw-600);
   margin-block-start: 15px;
-}
-
-.card-body .card-text{
-    line-height: 2.2rem;
-}
-
-.service-card .card-body{
-    margin-top: 3.8rem;
 }
 
 .btn-link span {
@@ -2938,11 +2920,10 @@ data{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   border: 1px solid #ccc; /* Optional border */
   border-radius: 10px; /* Optional rounded corners */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional shadow */
-  padding: 20px 10px;    
 }
 
 .card-back {
